fix: update correctly chirpy

--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -4,6 +4,8 @@
 
 /* ---------- scss placeholder --------- */
 
+@use 'variables' as *;
+
 %heading {
   color: var(--heading-color);
   font-weight: 400;
