--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1,6 +1,11 @@
 /* The common styles */
+@use '../colors/typography-light.scss' as *;
+@use '../colors/typography-dark.scss' as *;
+@use '../addon/variables.scss' as *;
+@use '../addon/module.scss' as *;
 
 html {
+  font-size: 16px;
   @media (prefers-color-scheme: light) {
     &:not([data-mode]),
     &[data-mode='light'] {
@@ -22,8 +27,6 @@ html {
       @include light-scheme;
     }
   }
-
-  font-size: 16px;
 }
 
 body {
