--- a/_sass/layout/categories.scss
+++ b/_sass/layout/categories.scss
@@ -1,6 +1,8 @@
 /*
   Style for Tab Categories
 */
+@use '../addon/variables.scss' as *;
+@use '../addon/module.scss' as *;
 
 %category-icon-color {
   color: gray;
