--- a/_sass/layout/home.scss
+++ b/_sass/layout/home.scss
@@ -2,6 +2,9 @@
   Style for Homepage
 */
 
+@use '../addon/variables.scss' as *;
+@use '../addon/module.scss' as *;
+
 #post-list {
   margin-top: 2rem;
 
